--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,12 @@
 .bg-color-three-reasons{
     background-color:#fff;
 }
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+.bg-color-work-history{
+    background-color: #9b59b6; ;
+}
 .ui-menu-color-home{
     background-color: #e67e22;
 }
@@ -49,7 +55,7 @@ h4{
     padding: 0 30px 30px;
     float:none;
 }
-
+.history-heading,
 .section-heading{
     font-family:"Exo",sans-serif;
     font-weight: 300;
@@ -171,7 +177,7 @@ footer{
 .social-links li a i {
     width:32px;
     height:32px;
-    padding:12px 0; 
+    padding:12px 3px; 
     border-radius: 50%;
     font-size:13px;
     line-height:7px;
@@ -190,3 +196,106 @@ footer{
 #footer-details{
     padding:20px;
 }
+/* --------- Three reasons --------*/
+.three-reasons-icon {
+    color:#e67e22;
+    font-size:26px;
+}
+.three-reasons-heading{
+    margin-bottom:15px;
+}
+
+/* --------- Personal info  --------*/
+.personal-info-item {
+    display:block;
+    margin-bottom:20px;
+    clear:both;
+}
+.personal-info-item .key,
+.personal-info-item .value{
+    display:inline-block;
+    padding-right:8px;
+
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin:0;
+}
+.personal-info-item .key {
+    width:30%;
+    margin-right:21px;
+    padding-top:2px;
+    vertical-align:top; /* This would hug the top of the <div> as much as possible */
+}
+.personal-info-item .key p {
+    font-weight: 700;
+} 
+
+.personal-info-item .value {
+    position:relative;
+    width:60%;
+
+}
+
+/* --------- Skills  --------*/
+.progress {
+    position:relative;
+    height:25px;
+    margin-bottom:4px;
+}
+.progress-type {
+    position:absolute;
+    left:0px;
+    font-weight:400;
+    padding:3px 30px 3px 10px;
+    color:#fafafa;
+    background-color: rgba(25,25,25,0.2);
+}
+.progress-section{
+    margin:40px 20px;
+}
+/* --------- Work history  --------*/
+.history-heading {
+    color:#fafafa;
+    margin-bottom:40px;
+ 
+}
+
+.timeline-item {
+    padding:4em 2em 0em 2em;
+    position:relative;
+    color:#fafafa;
+    border-left:1px solid; /* This would give the effect of our vertical timeline. */
+}
+.timeline-item p{
+    margin:0;
+    padding:0;
+}
+.timeline-item:before{ /* This sets the content that will appear either before or after the class in question */
+    content: attr(data-dates);
+    position:absolute;
+    left:2.5em;
+    top:3em;
+    display:block;
+    font-family:"Exo", sans-serif;
+    font-weight:500;
+    font-size:0.8em;
+    padding:0;
+    margin:0;
+}
+.timeline-item:after{ /* This would create a little disk.A node on the timeline */
+    width:12px;
+    height:12px;
+    display:block;
+    top:2.5em;
+    position:absolute;
+    left:-6px;  /*This would drag it out to the left slightly and make it sit centrally on our timeline border */ 
+    border-radius:12px;
+    content:'';
+    background: #fafafa;
+}
+.history-items {
+    margin-bottom: 30px;
+}
+
